# seatalk-telegram-stickers

./: Cargo.toml  Dockerfile  docker-compose.yml
config/: production.yml
src/: config.rs  consts.rs  convert.rs  lib.rs  main.rs  telegram.rs  webhook.rs
src/seatalk_api/: auth.rs  client.rs  endpoint.rs  ignore.rs  mod.rs  query.rs  seatalk.rs  webhooks.rs
src/seatalk_api/api/: access_token.rs  common.rs  error.rs  mod.rs  send_group_message.rs  send_subscriber_message.rs
