[package]
name = "seatalk-tgs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = "0.7.5"
backon = "1.2.0"
base64 = "0.22.1"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures-util = "0.3.30"
governor = "0.6.3"
http = "1.1.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
teloxide = "0.13.0"
temp-dir = "0.1.13"
thiserror = "1.0.63"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "rt"] }
tower = { version = "0.5.0", features = ["limit", "util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
